Closed Bug 103393 Opened 24 years ago Closed 24 years ago

areTheSameFileNames does not work correctly on Mac!

Categories

(Core Graveyard :: Plug-ins, defect, P1)

PowerPC
All
defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.6

People

(Reporter: peterlubczynski-bugs, Assigned: peterlubczynski-bugs)

Details

(Whiteboard: [patch in trunk] [PDT- for 094 branch])

Attachments

(1 file, 1 obsolete file)

In nsPluginHostImpl.cpp, areTheSameFileNames compares leafs names of paths. However, on Mac, we sometimes pass the full path and sometimes pass just the leaf name. This should all be converted to using nsIFile. Severity: On Macintosh, we may pick up the wrong plugin if there are duplicates. This is quite serious because the order seems to be scattered. If will cause multiple plugins of the same kind of be listed in about:plugins To Reproduce: 1) Install a bunch of plugins in the System folder and local folder 2) Visit about:plugins. See if there are any duplicates already 3) Visit a Quicktime site 4) Go back to about:plugins, Quicktime may be listed twice
Attached patch workaround patch (obsolete) — Splinter Review
The patch will always try to pass the full path. Mac has this set always while other platforms never do. It's not a perfect solution, but it will do until we can convert to using nsIFile. Andrei, can you review?
Status: NEW → ASSIGNED
Keywords: nsbranch+, patch, review
Priority: -- → P1
Target Milestone: --- → mozilla0.9.5
Attachment #52289 - Attachment is obsolete: true
Attached patch better patchSplinter Review
what are the chances this will make the 094 branch?
Whiteboard: [Need ETA]
Because we can either get the full path or just the leaf filename on Mac, the new patch will attempt to compare either/or to see if they match. It'll also work for comparing just two leaf filenames. Andrei, can you review the new patch?
Whiteboard: [Need ETA] → [10.9]
Comment on attachment 52333 [details] [diff] [review] better patch r=av, Peter, please add some comments to the code explaining why we do this.
Attachment #52333 - Flags: review+
Keywords: nsbranch+nsbranch-
Whiteboard: [10.9]
Target Milestone: mozilla0.9.5 → mozilla0.9.6
actually I don't think this is an rtm stopper anymore because it should not altar user experience too much...adding minus
Comment on attachment 52333 [details] [diff] [review] better patch sr=attinasi
Attachment #52333 - Flags: superreview+
patch checked in, marking FIXED
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Talking with Beard, this should be checked in on the 0.9.4 branch. This will prevent us from screwing up in plugin scanning code on the Mac and possibly loading the same plugin twice.
Status: RESOLVED → REOPENED
Keywords: nsbranch-nsbranch+
Resolution: FIXED → ---
Whiteboard: [patch in trunk]
PDT-, let's get it into the next release.
Whiteboard: [patch in trunk] → [patch in trunk] [PDT-]
Patch already on trunk, marking FIXED, again
Status: REOPENED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
Whiteboard: [patch in trunk] [PDT-] → [patch in trunk] [PDT- for 094 branch]
v
Status: RESOLVED → VERIFIED
so, this was on the trunk before we branched, right?
This is OLD.
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: