Fix for duplicate plugins being listed on Mac bug 103393 r=av sr=attinasi